--- a/x86_64.config
+++ b/x86_64.config
@@ -5,11 +5,37 @@ CONFIG_PACKAGE_grub2-efi=y
 CONFIG_EFI_IMAGES=y
 CONFIG_TARGET_IMAGES_GZIP=y
 CONFIG_TARGET_KERNEL_PARTSIZE=16
-CONFIG_TARGET_ROOTFS_PARTSIZE=300
+CONFIG_TARGET_ROOTFS_PARTSIZE=180
 # CONFIG_GRUB_CONSOLE is not set
-CONFIG_PACKAGE_luci-app-docker=y
-CONFIG_PACKAGE_luci-i18n-docker-zh-cn=y
+#CONFIG_PACKAGE_luci-app-docker=y
+#CONFIG_PACKAGE_luci-i18n-docker-zh-cn=y
 # CONFIG_PACKAGE_luci-app-qbittorrent is not set
+# CONFIG_PACKAGE_luci-app-xlnetacc is not set
+# CONFIG_PACKAGE_luci-app-uugamebooster is not set
+#CONFIG_PACKAGE_uugamebooster=y
+#CONFIG_PACKAGE_luci-app-uugamebooster=y
+#CONFIG_PACKAGE_luci-i18n-uugamebooster-zh-cn=y
+# CONFIG_PACKAGE_luci-app-vsftpd is not set
+# CONFIG_PACKAGE_vsftpd is not set
+# CONFIG_PACKAGE_vsftpd-alt is not set
+# CONFIG_PACKAGE_vsftpd-tls is not set
+# CONFIG_PACKAGE_luci-app-samba is not set
+# CONFIG_PACKAGE_luci-i18n-samba-zh-cn is not set
+# CONFIG_PACKAGE_samba36-server is not set
+# CONFIG_PACKAGE_autosamba is not set
+CONFIG_PACKAGE_luci-proto-ipv6=y
+CONFIG_PACKAGE_odhcp6c=y
+CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
+CONFIG_PACKAGE_odhcpd-ipv6only=y
+CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
+CONFIG_PACKAGE_ip6tables=y
+CONFIG_PACKAGE_ip6tables-mod-nat=y
+CONFIG_PACKAGE_ipv6helper=y
+CONFIG_PACKAGE_6in4=y
+CONFIG_PACKAGE_kmod-ebtables-ipv6=y
+CONFIG_PACKAGE_open-vm-tools=y
+CONFIG_PACKAGE_luci-app-smartdns=y
+CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_luci-app-ssr-plus=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust=y
@@ -69,8 +95,8 @@ CONFIG_OPENVPN_openssl_ENABLE_PF=y
 CONFIG_OPENVPN_openssl_ENABLE_PORT_SHARE=y
 CONFIG_OPENVPN_openssl_ENABLE_SERVER=y
 CONFIG_OPENVPN_openssl_ENABLE_SMALL=y
-CONFIG_KERNEL_BUILD_USER="eSir Playground"
-CONFIG_GRUB_TITLE="OpenWrt AutoBuild by eSirPlayground"
+CONFIG_KERNEL_BUILD_USER="Sunny"
+CONFIG_GRUB_TITLE="OpenWrt AutoBuild by Sunny"
 CONFIG_PACKAGE_kmod-usb-ohci=y
 CONFIG_PACKAGE_kmod-usb-ohci-pci=y
 CONFIG_PACKAGE_kmod-usb-storage-uas=y
